# rust-http-server

./: Cargo.toml  README.md  server.sh
src/: main.rs
