[package]
name = "rust-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.38"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
nom = "7.1.3"                                       # parser combinators
itertools = "0.11.0"
flate2 = "1.0.30"
regex = "1.10.5"                                # General iterator helpers

[dev-dependencies]
pretty_assertions = "1.3.0"                         # nicer looking assertions
